Definição da fonte globalmente no tailwind; pre-carregamento da sprint para agilizar a rederização; criação de um componente para ícones

--- a/app/app/globals.css
+++ b/app/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-white text-[#272727];
+  @apply font-sans bg-white text-[#272727];
 }
 
 @layer utilities {
